feature:用户基础组件封装

--- a/frameworks/base/pom.xml
+++ b/frameworks/base/pom.xml
@@ -9,13 +9,12 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <groupId>org.opengoofy.index12306.frameworks.starter.bases</groupId>
-    <artifactId>base</artifactId>
+    <artifactId>index12306-base-spring-boot-starter</artifactId>
 
-    <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
-
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+        </dependency>
+    </dependencies>
 </project>
