--- a/frameworks/bizs/pom.xml
+++ b/frameworks/bizs/pom.xml
@@ -5,17 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.opengoofy.index12306</groupId>
-        <artifactId>index12306-all</artifactId>
+        <artifactId>index12306-frameworks</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-
-    <artifactId>index12306-frameworks</artifactId>
+    <artifactId>index12306-bizs-spring-boot-starter</artifactId>
     <packaging>pom</packaging>
-    <modules>
-        <module>base</module>
-        <module>bizs</module>
-        <module>bizs/user</module>
-        <module>cache</module>
-    </modules>
+
 
 </project>
